# WSIStreamer

./: .dockerignore  API_SPECIFICATIONS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  run_minio_integration_test.sh  rustfmt.toml
.claude/: settings.json
.github/workflows/: CI.yml  release.yml  test.yml
scripts/: e2e_test.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/format/: detect.rs  generic_tiff.rs  jpeg.rs  mod.rs  svs.rs
src/format/tiff/: mod.rs  parser.rs  pyramid.rs  tags.rs  validation.rs  values.rs
src/io/: block_cache.rs  mod.rs  range_reader.rs  s3_reader.rs
src/server/: auth.rs  dzi.rs  handlers.rs  mod.rs  routes.rs  viewer.rs
src/slide/: mod.rs  reader.rs  registry.rs  s3_source.rs
src/tile/: cache.rs  encoder.rs  mod.rs  service.rs
tests/: integration.rs
tests/integration/: api_tests.rs  auth_tests.rs  cache_tests.rs  format_tests.rs  real_service_tests.rs  slides_tests.rs  test_utils.rs
