[package]
name = "wsi-streamer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
aws-sdk-s3 = "1"
aws-config = "1"
bytes = "1"
async-trait = "0.1"
thiserror = "2"
lru = "0.12"
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# HTTP server
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
tracing = "0.1"

# Authentication
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
hex = "0.4"

# CLI and logging
clap = { version = "4", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
