[package]
name = "wsi-streamer"
version = "0.4.0"
edition = "2021"
rust-version = "1.75"
authors = ["Pierre-Antoine Bannier"]
description = "A tile server for Whole Slide Images stored in S3. Stream tiles directly from cloud storage using HTTP range requests."
license = "MIT"
repository = "https://github.com/PABannier/WSIStreamer"
homepage = "https://github.com/PABannier/WSIStreamer"
documentation = "https://docs.rs/wsi-streamer"
readme = "README.md"
keywords = ["wsi", "medical-imaging", "tile-server", "s3", "pathology"]
categories = ["science", "multimedia::images", "web-programming::http-server"]
exclude = [
    "assets/*",
    ".github/*",
    ".claude/*",
    "docker-compose.yml",
    "Dockerfile",
    "scripts/*",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
aws-sdk-s3 = "1"
aws-config = "1"
bytes = "1"
async-trait = "0.1"
thiserror = "2"
lru = "0.12"
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# HTTP server
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
tracing = "0.1"
url = "2"
urlencoding = "2"

# Authentication
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
hex = "0.4"

# CLI and logging
clap = { version = "4", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# JPEG 2000 support
jpeg2k = "0.10"

[dev-dependencies]
aws-smithy-runtime = "1"
hyper-rustls = { version = "0.24", default-features = false, features = ["http1", "http2", "webpki-roots"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
